# my-rag-project

./: .gitignore  DEV_SPEC.md  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.yaml  settings.yaml.example
config/prompts/: chunk_refinement.txt  image_captioning.txt  metadata_enrichment.txt  rerank.txt
scripts/: evaluate.py  ingest.py  query.py  start_dashboard.py
src/: __init__.py
src/core/: __init__.py  settings.py  types.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/libs/: __init__.py
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/e2e/: test_data_ingestion.py  test_query_cli.py  test_recall.py
tests/fixtures/: golden_test_set.json  noisy_chunks.json  normalization_samples.json
tests/integration/: test_chroma_store_roundtrip.py  test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py  test_metadata_enricher_llm.py  test_multiformat_ingestion.py  test_retrieval_backward_compat.py  test_retrieval_degradation.py  test_retrieval_enhancements_e2e.py
tests/unit/: test_azure_vision_llm.py  test_base_splitter_contract.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_chunker_routing.py  test_composite_evaluator.py  test_config_loading.py  test_config_service.py  test_core_types.py  test_cross_encoder_reranker.py  test_custom_evaluator.py  test_data_service.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_document_manager.py  test_docx_loader.py  test_embedding_factory.py  test_embedding_providers_smoke.py  test_eval_runner.py  test_evaluation_panel.py  test_file_integrity.py  test_filter_extractor.py  test_fusion_factory.py  test_fusion_rrf.py  test_fusion_weighted.py  (+55 more)
(+120 files in other folders)
