[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-knowledge-hub"
version = "0.1.0"
description = "A multi-stage RAG & MCP knowledge retrieval framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
]
# Traditional->Simplified Chinese normalization (retrieval.normalize_to_simplified).
# Only required when that toggle is enabled; the pipeline degrades gracefully
# (skips t2s with a warning) when this is not installed.
opencc = [
    "opencc-python-reimplemented>=0.1.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
pythonpath = ["."]
